<?xml version="1.0"?>
<package>
  <name>rqt_map_topo</name>
  <version>0.0.1</version>
  <description>The rqt_map_topo plugin</description>
  <maintainer email="raulpl25@gmail.com">Raul Peralta-Lozada</maintainer>
  <license>BSD</license>

  <url type="GOLEM group">http://golem.iimas.unam.mx/</url>

  <author email="raulpl25@gmail.com">Raul Peralta-Lozada</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
